# libmla

./: CMakeLists.txt  LICENSE  README.md
include/: DataSet.h  DecisionTree.h  mla.h
test/: DecisionTree_unittest.cpp  test.cpp
